<resources>
    <string name="app_name" translatable="false">Motivation</string>
    <string name="new_phrase">New Phrase</string>
    <string name="motivation">Motivation</string>
    <string name="hello">Hello</string>
    <string name="lets_begin">Let\'s begin?</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="save">Save</string>

    <string name="validation_mandatory_name">Please fill your name!</string>
</resources>