<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.UserActivity"
    android:background="@color/purple">

    <TextView
        android:id="@+id/text_lets_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lets_begin"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/cabin"
        android:textSize="30sp"
        android:layout_marginTop="64dp"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/edit_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:hint="@string/what_is_your_name"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        android:fontFamily="@font/cabin"
        android:autofillHints="true"
        android:textColor="@color/white"
        />
    
    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        android:text="@string/save"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/cabin"
        android:backgroundTint="@color/dark_purple"
        />

</RelativeLayout>