<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/linear_layout_menu"
        android:background="@color/purple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">
        <ImageView
            android:id="@+id/image_all"
            android:src="@drawable/ic_all_inclusive"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:tint="@color/dark_purple"
            />
        <ImageView
            android:id="@+id/image_happy"
            android:src="@drawable/ic_happy"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:tint="@color/dark_purple"
            />
        <ImageView
            android:id="@+id/image_sunny"
            android:src="@drawable/ic_sunny"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:tint="@color/dark_purple"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/text_hello_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_menu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/cabin"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="22sp"
        />

    <TextView
        android:id="@+id/text_phrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:fontFamily="@font/cabin"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:text="@string/motivation"
        />

    <View
        android:layout_width="128dp"
        android:layout_height="2dp"
        android:elevation="4dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_phrase"
        android:backgroundTint="@color/purple"
        android:background="@color/black"
        />

    <Button
        android:id="@+id/button_new_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/dark_purple"
        android:fontFamily="@font/cabin"
        android:text="@string/new_phrase" />

</RelativeLayout>